Closed Bug 1888291 Opened 3 months ago Closed 3 months ago

about:support DLP connection status not updated after agent exits

Categories

(Firefox :: Data Loss Prevention, defect)

defect

Tracking

()

VERIFIED FIXED
126 Branch
Tracking Status
firefox126 --- fixed
firefox128 --- verified
firefox129 --- verified

People

(Reporter: haik, Assigned: gstoll)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

If the DLP agent exits/crashes while Nightly is running, the about:support DLP section is not updated and continues to list Connected to Agent as true.

Assignee: nobody → gstoll
Status: NEW → ASSIGNED
Pushed by gstoll@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/ab342f86f676
mark Content Analysis as not connected in about:support if agent connection has gone away r=dlp-reviewers,handyman
Status: ASSIGNED → RESOLVED
Closed: 3 months ago
Resolution: --- → FIXED
Target Milestone: --- → 126 Branch

Verified this on Firefox 128.0b1 and on Firefox Nightly 129.0a1 (2024-06-10), using Windows 11 and "Connected to Agent" from about:support is set to false after the agent exits while Firefox is running, but only if the DLP analysis is triggered after the agent has closed.
@gstoll, is this expected? I will attach a video as well.
Thanks in advance!

Flags: needinfo?(gstoll)

Hi @bhidecuti - Yes, I think this is fine. Thanks for the detailed testing!

Flags: needinfo?(gstoll)

Thanks for the confirmation!
I am going to mark this verified as fixed based on Comment 4.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: