Bug 1888291 - mark Content Analysis as not connected in about:support if agent connection has gone away r=dlp-reviewers,handyman

Differential Revision: https://phabricator.services.mozilla.com/D206031